# parkamera

./: Cargo.toml  package-lock.json  package.json
backend/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/entity/src/: car_log.rs
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: constants.rs  lib.rs  main.rs
backend/src/entities/: car_log.rs  mod.rs  prelude.rs
backend/src/routes/: car_arrived.rs  car_left.rs  cars.rs  get_cars.rs  mod.rs
car_detection/: .gitignore  README.md  compare_slots.py  detect_cars.py  main.py  parking_slots_coordinates.txt  parking_spots_coordinates.txt  requirements.txt  run.py  setup.py
car_detection/car_detection/: crop_image.py  detect_car.py  select_spots.py
car_detection/parking_manager/: compare_spots.py
car_detection/scripts/: check_slots.sh  setup_script.sh
frontend/: .example.env  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/camera/: page.tsx
frontend/src/app/components/stats/: statCard.tsx
frontend/src/app/stats/: page.tsx
frontend/src/components/history/: history.tsx
frontend/src/components/logo/: Logo.tsx
frontend/src/components/navbar/: navbar.tsx
frontend/src/components/slot/: slot.tsx
frontend/src/components/slots-info/: slots-info.tsx
frontend/src/types/: car.dto.ts
react-andy/: package-lock.json  package.json
react-andy/src/app/: page.tsx
react-andy/src/app/stats/: page.tsx
src/app/components/: carCard.tsx  carSection.tsx  cardDetails.tsx  header.tsx  image.tsx
